# briefs_simplon_MS_IA_25-03-2024-29-05-2024

./: .gitignore  README.md  pyproject.toml
tp2_bigquery/: pyproject.toml
tp2_bigquery/data/data_tp2/: analyse_app_mobility_region_FR_GE.csv  analyse_app_mobility_region__jours_feries_FR_GE.csv  q4_2_months_years_tendance_mobilite_FR.csv  q4_2_months_years_tendance_mobilite_FR_GR.csv  q4_2_season_parks_avg_tendance_mobilite_FR_GR.csv  q4_3_period_workplace_avg_tendance_mobilite_FR_GR.csv  q4_4_days_workplace_recreation_avg_tendance_mobilite_FR_GR.csv  q4_4_days_workplace_recreation_avg_tendance_mobilite_FR_GR_2.csv  q4_5_season_avg_tendance_mobilite_FR_GR.csv  q4_avg_tendance_mobilite_FR_GE.csv  q4_tendance_mobilite_FR.csv  q4_tendance_mobilite_FR_GE.csv
tp2_bigquery/src/: requete.sql
tp2_bigquery/src/notebook/: analyses_covid.ipynb
tp2_bigquery/src/scripts_python/: scripts_plots.py
tp_api/: pyproject.toml
tp_api/data/: extracted_products_champagne_dataset.csv
tp_api/src/: api_example.py  api_publique_exemple.py  post_jsonplaceholder.py
tp_api_flask/: app.py  books.json  books.py  pyproject.toml
tp_api_flask/add/: add_book.py
tp_api_flask/add/templates/add/: add_book.html
tp_api_flask/search/: search.py
tp_api_flask/search/templates/search/: search_book.html
