[tool.poetry]
name = "briefs-simplon"
version = "0.1.0"
description = ""
authors = ["DaiTensa <dai.tensaout@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.2.1"
seaborn = "^0.13.2"
matplotlib = "^3.9.0"
pandas = "^2.2.2"
Flask = "^3.0.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
